# endlessDangeon_py

./: docker-compose.yml  pyproject.toml
app-source/: .env.template  main.py
app-source/alembic/versions/: 2025_02_18_2346-5bd32475c6aa_create_users_table.py  2025_02_20_2343-2009c6ad4bf0_create_users_table.py  2025_02_20_2351-13ea7b565ef5_create_haracters_table.py  2025_02_21_1156-bf33700531d1_create_player_characters_table.py  2025_02_21_1243-d3736dd2596b_create_player_characters_equipment_table.py  2025_02_21_1251-b8e1f6c05e82_create_player_characters_inventory_table.py  2025_02_21_1303-6098220b6551_create_item_table.py  2025_02_21_1309-ddcd363636e7_create_npc_table.py  2025_02_21_1951-15bb9fce4777_allow_character_name_is_nullable.py  2025_02_21_1954-db186a06ba0b_allow_equip_all_attributes_is_nullable.py  2025_02_26_1522-0e1f69ab3bf1_create_location_table.py  2025_02_26_1526-932133ba3941_add_rel_to_characters_child_classes.py  2025_02_26_1956-af33c4e0f891_create_enemies_table.py  2025_02_28_2305-96150d675a4a_create_location_association_table.py
app-source/api/: __init__.py
app-source/api/api_v1/: __init__.py  base.py  character_base.py  characters.py  enemy.py  inventory_base.py  inventorys.py  location.py  npc.py  users.py
app-source/core/: config.py
app-source/core/models/: __init__.py  base.py  char_equip.py  character.py  db_helper.py  enemy.py  inventory.py  item.py  location.py  npc.py  player_char.py  user.py
app-source/core/schemas/: character.py  enemy.py  equipment.py  inventory.py  inventorys.py  location.py  (+3 more)
app-source/utils/: case_converter.py
(+24 files in other folders)
