[project]
name = ""
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "fastapi>=0.115.5,<0.116",
    "uvicorn>=0.32.0,<0.33",
    "pydantic[email]>=2.9.2,<3",
    "pydantic-settings>=2.6.1,<3",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "asyncpg>=0.30.0,<0.31",
    "alembic>=1.14.0,<2",
    "orjson>=3.10.15",
]

[dependency-groups]
dev = [
    "black>=24.10.0,<25",
    "pytest>=8.3.4",
]

[tool.uv]
package = false

